# ParallelKmeans

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.cpp  appMPI.cpp  benchmark.cpp
include/: kmeans.h  kmeansMPI.h  utils.h
src/: CMakeLists.txt  kmeans.cpp  kmeansMPI.cpp
